--- a/src/app/components/movies/trendings-slider/trendings-slider.component.html
+++ b/src/app/components/movies/trendings-slider/trendings-slider.component.html
@@ -1,13 +1,12 @@
 <div class="container slider-container">
   <!-- You can now use your library component in app.component.html -->
-  <p>trendings-slider woxrks!</p>
 
   <ngx-slick-carousel
     class="carousel"
     #slickModal="slick-carousel"
     [config]="slideConfig"
   >
-    <div ngxSlickItem *ngFor="let slide of slides" class="slide">
+    <div ngxSlickItem *ngFor="let slide of slides" class="slide mt-3">
       <img
         class="rounded img-fluid img-size"
         src="{{ slide.img }}"
@@ -16,13 +15,11 @@
       />
       <div class="top-left">
         <ul class="list-inline">
-          <li class="list-inline-item">
+          <li class="list-inline-item badge-group">
             <span class="badge badge-blue">TMDB</span>
             <span class="badge badge-light">8</span>
           </li>
-          <li class="list-inline-item">
-            <span class="badge badge-danger text-white">Nuevo</span>
-          </li>
+          <li class="list-inline-item badge badge-danger text-white">Nuevo</li>
         </ul>
       </div>
     </div>
