--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -14,14 +14,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link">
+          <form class="form-search bg-secondary">
             <input
               class="form-control me-2 custom"
               type="search"
               placeholder="Buscar"
               aria-label="Search"
+              data-toggle="tooltip"
             />
-          </a>
+          </form>
         </li>
       </ul>
     </div>
