--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
       <br />
     </div>
   </div>
-  <div class="main-content">
+  <div class="main-content" id="main-container">
     <div class="row row-cols-2 row-cols-md-6">
       <div class="col" *ngFor="let movie of listMovies">
         <div class="card border-0 h-100">
