Validating if its a recent movie

--- a/src/app/components/movies/trendings-slider/trendings-slider.component.html
+++ b/src/app/components/movies/trendings-slider/trendings-slider.component.html
@@ -10,6 +10,7 @@
       <app-movie-poster
         [imgSrc]="movie | imageSrc"
         [vote_average]="movie.vote_average"
+        [release_date]="movie.release_date"
       ></app-movie-poster>
     </div>
   </ngx-slick-carousel>
