--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,6 +12,7 @@
           <app-movie-poster
             [imgSrc]="movie | imageSrc"
             [vote_average]="movie.vote_average"
+            [release_date]="movie.release_date"
           >
           </app-movie-poster>
           <div class="card-body">
