--- a/src/app/components/shared/movie-poster/movie-poster.component.html
+++ b/src/app/components/shared/movie-poster/movie-poster.component.html
@@ -12,6 +12,11 @@
         vote_average | number: "1.1-1"
       }}</span>
     </li>
-    <li class="list-inline-item badge badge-danger text-white">Nuevo</li>
+    <li
+      class="list-inline-item badge badge-danger text-white"
+      *ngIf="time < movieTime"
+    >
+      Nuevo
+    </li>
   </ul>
 </div>
