Trending slider  new releases

--- a/src/app/components/movies/trendings-slider/trendings-slider.component.html
+++ b/src/app/components/movies/trendings-slider/trendings-slider.component.html
@@ -15,6 +15,8 @@
         [imgSrc]="movie | imageSrc"
         [vote_average]="movie.vote_average"
         [release_date]="movie.release_date"
+        [movies]="newMovies"
+        [id]="movie.id"
       ></app-movie-poster>
     </div>
   </ngx-slick-carousel>
