--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,6 +6,19 @@
     </div>
   </div>
   <div class="main-content" id="main-container">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <mat-form-field appearance="fill">
+          <mat-label>Género</mat-label>
+          <mat-select (selectionChange)="selectGenre($event)">
+            <mat-option>Todos</mat-option>
+            <mat-option *ngFor="let genre of genres" [value]="genre.id">
+              {{ genre.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
     <div class="row row-cols-2 row-cols-md-6">
       <div class="col" *ngFor="let movie of moviesToDisplay">
         <div class="card border-0 h-100">
@@ -25,6 +38,7 @@
       </div>
     </div>
     <mat-paginator
+      *ngIf="!genre"
       [length]="moviesLength"
       [hidePageSize]="true"
       [pageSize]="20"
@@ -33,5 +47,15 @@
       [showFirstLastButtons]="true"
     >
     </mat-paginator>
+    <mat-paginator
+      *ngIf="genre"
+      [length]="moviesLength"
+      [hidePageSize]="true"
+      [pageSize]="20"
+      (getNumberOfPages)="(pageSize - 1)"
+      [pageIndex]="0"
+      (page)="sliceListMovies2(true, $event.pageIndex)"
+      [showFirstLastButtons]="true"
+    ></mat-paginator>
   </div>
 </div>
