--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,11 +6,17 @@
     </div>
   </div>
   <div class="main-content" id="main-container">
+    <div class="row container" *ngIf="loading">
+      <mat-progress-bar mode="query" color="primary"></mat-progress-bar>
+    </div>
     <div class="row mb-2">
       <div class="col-sm-6">
         <mat-form-field appearance="fill">
           <mat-label>Género</mat-label>
-          <mat-select (selectionChange)="selectGenre($event)">
+          <mat-select
+            (selectionChange)="selectGenre($event)"
+            [disabled]="loading"
+          >
             <mat-option>Todos</mat-option>
             <mat-option *ngFor="let genre of genres" [value]="genre.id">
               {{ genre.name }}
