Navigation to overview movie component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -32,6 +32,7 @@
             [imgSrc]="movie | imageSrc"
             [vote_average]="movie.vote_average"
             [release_date]="movie.release_date"
+            [id]="movie.id"
           >
           </app-movie-poster>
           <div class="card-body">
