--- a/src/app/components/movies/trendings-slider/trendings-slider.component.html
+++ b/src/app/components/movies/trendings-slider/trendings-slider.component.html
@@ -16,6 +16,7 @@
         [vote_average]="movie.vote_average"
         [release_date]="movie.release_date"
         [movies]="newMovies"
+        [idCompare]="movie.id"
         [id]="movie.id"
       ></app-movie-poster>
     </div>
