--- a/src/app/components/movies/movie-overview/movie-overview.component.html
+++ b/src/app/components/movies/movie-overview/movie-overview.component.html
@@ -1,6 +1,12 @@
-<mat-divider></mat-divider>
+<div class="container" *ngIf="loading">
+  <mat-divider></mat-divider>
+  <div class="d-flex justify-content-center">
+    <mat-spinner class="mt-5"></mat-spinner>
+  </div>
+</div>
+<div class="container" *ngIf="!loading">
+  <mat-divider></mat-divider>
 
-<div class="container">
   <div class="row">
     <nav class="col-12">
       <ol class="breadcrumb mt-2">
