Movies on local storage

--- a/src/app/components/movies/trendings-slider/trendings-slider.component.css
+++ b/src/app/components/movies/trendings-slider/trendings-slider.component.css
@@ -5,6 +5,9 @@
 .slide:focus {
   outline: none !important;
 }
+.slide:active {
+  outline: none !important;
+}
 .slide {
   position: relative !important;
 }
