WhatsApp button component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -55,6 +55,7 @@
       </div>
     </div>
   </div>
+  <app-whats-app-button></app-whats-app-button>
   <mat-paginator
     *ngIf="!genre"
     [length]="moviesLength"
