--- a/src/app/components/movies/movie-overview/movie-overview.component.html
+++ b/src/app/components/movies/movie-overview/movie-overview.component.html
@@ -54,7 +54,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li *ngIf="value > 0">
               <mat-progress-spinner
                 *ngIf="value"
                 class="example-margin"
