--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -14,15 +14,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <form class="form-search bg-secondary">
+          <div class="form-search bg-secondary">
             <input
               class="form-control me-2 custom"
               type="search"
               placeholder="Buscar"
               aria-label="Search"
-              data-toggle="tooltip"
+              #movieSearch
+              (keyup.enter)="searchMovie(movieSearch.value)"
             />
-          </form>
+          </div>
         </li>
       </ul>
     </div>
