Search movies in stock

--- a/src/app/components/movies/movie-overview/movie-overview.component.html
+++ b/src/app/components/movies/movie-overview/movie-overview.component.html
@@ -3,6 +3,7 @@
   <app-loadingcomponent></app-loadingcomponent>
 </div>
 <div class="container" *ngIf="!loading">
+  <button class="btn btn-warning" (click)="return()">Regresar</button>
   <mat-divider></mat-divider>
 
   <div class="row">
