--- a/src/app/components/movies/searchmovie/searchmovie.component.html
+++ b/src/app/components/movies/searchmovie/searchmovie.component.html
@@ -14,6 +14,8 @@
             [vote_average]="movie.vote_average"
             [release_date]="movie.release_date"
             [id]="movie.id"
+            [idExist]="movie.id"
+            [movies]="moviesStock"
           >
           </app-movie-poster>
           <div class="card-body">
