Trending slider and movies change

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="slider-main">
-    <div class="container">
-      <app-trendings-slider></app-trendings-slider>
+    <div class="container" *ngIf="!loading">
+      <app-trendings-slider [tMovies]="trendingMovies"></app-trendings-slider>
       <br />
     </div>
   </div>
