--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -45,49 +45,13 @@
       </div>
     </div>
   </div>
-  <nav class="pages">
-    <ul class="pagination pagination justify-content-center" *ngIf="!genre">
-      <li class="page-item" [ngClass]="{disabled: index === 0}">
-        <a class="page-link" (click)="sliceListMovies(true, index - 1)" [disabled]="index === 0">
-          <i class="fas fa-chevron-circle-left"></i>
-        </a>
-      </li>
-      <li class="page-item" [ngClass]="{active: pag === index}"
-        *ngFor="let pag of pagesArray | slice: ((index === 5 || index >= 4) ? ((index + 3 === totalPages || index + 2 === totalPages || index + 1 === totalPages || index === totalPages) ? totalPages - 5 : index - 2) : 0) :  ((index === 5 || index >= 4) ? index + 3 : 5)">
-        <a class="page-link" (click)="sliceListMovies(true, pag)">{{pag + 1}}</a>
-      </li>
-      <li class="page-item" [ngClass]="{disabled: index === totalPages - 1}">
-        <a class="page-link" (click)="sliceListMovies(true, index + 1)" [disabled]="index === totalPages - 1">
-          <i class="fas fa-chevron-circle-right"></i>
-        </a>
-      </li>
-    </ul>
-    <ul class="pagination pagination justify-content-center" *ngIf="genre">
-      <li class="page-item" [ngClass]="{disabled: index === 0}">
-        <a class="page-link" (click)="sliceListMovies2(true, index - 1)" [disabled]="index === 0">
-          <i class="fas fa-chevron-circle-left"></i>
-        </a>
-      </li>
-      <li class="page-item" [ngClass]="{active: pag === index}"
-        *ngFor="let pag of pagesArray2 | slice: ((index === 5 || index >= 4) ? ((index + 3 === totalPages || index + 2 === totalPages || index + 1 === totalPages || index === totalPages) ? totalPages - 5 : index - 2) : 0) :  ((index === 5 || index >= 4) ? index + 3 : 5)">
-        <a class="page-link" (click)="sliceListMovies2(true, pag)">{{pag + 1}}</a>
-      </li>
-      <li class="page-item" [ngClass]="{disabled: index === totalPages - 1}">
-        <a class="page-link" (click)="sliceListMovies2(true, index + 1)" [disabled]="index === totalPages - 1">
-          <i class="fas fa-chevron-circle-right"></i>
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <div class="d-flex justify-content-center pb-5">
-    <p class="fs-5" *ngIf="!genre">{{index ? index + 1 : 1}} de {{totalPages}}</p>
-    <p class="fs-5" *ngIf="genre">{{index ? index + 1 : 1}} de {{totalPages}}</p>
-  </div>
+  <ng-container *ngIf="!genre">
+    <app-paginator [index]="index" [pagesArray]="pagesArray" [totalPages]="totalPages"
+      (newIndexValue)="sliceListMovies(true, $event)"></app-paginator>
+  </ng-container>
+  <ng-container *ngIf="genre">
+    <app-paginator [index]="index" [pagesArray]="pagesArray2" [totalPages]="totalPages"
+      (newIndexValue)="sliceListMovies2(true, $event)"></app-paginator>
+  </ng-container>
   <app-whats-app-button></app-whats-app-button>
-  <!-- <mat-paginator *ngIf="!genre" [length]="moviesLength" [hidePageSize]="true" [pageSize]="20"
-    (getNumberOfPages)="(pageSize - 1)" (page)="sliceListMovies(true, $event.pageIndex)">
-  </mat-paginator>
-  <mat-paginator *ngIf="genre" [length]="moviesLength" [hidePageSize]="true" [pageSize]="20"
-    (getNumberOfPages)="(pageSize - 1)" [pageIndex]="0" (page)="sliceListMovies2(true, $event.pageIndex)">
-  </mat-paginator> -->
 </div>
