--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,10 @@
       <div class="col-sm-6">
         <mat-form-field appearance="fill">
           <mat-label>Género</mat-label>
-          <mat-select (selectionChange)="selectGenre($event)" [disabled]="loading">
+          <mat-select
+            (selectionChange)="selectGenre($event)"
+            [disabled]="loading"
+          >
             <mat-option>Todos</mat-option>
             <mat-option *ngFor="let genre of genres" [value]="genre.id">
               {{ genre.name }}
@@ -22,11 +25,19 @@
         </mat-form-field>
       </div>
     </div>
-    <div class="row row-cols-2 row-cols-md-6" *ngIf="moviesToDisplay.length > 0">
+    <div
+      class="row row-cols-2 row-cols-md-6"
+      *ngIf="moviesToDisplay.length > 0"
+    >
       <div class="col" *ngFor="let movie of moviesToDisplay">
         <div class="card border-0 h-100">
-          <app-movie-poster [imgSrc]="movie | imageSrc" [vote_average]="movie.vote_average"
-            [release_date]="movie.release_date" [id]="movie.id">
+          <app-movie-poster
+            [imgSrc]="movie | imageSrc"
+            [vote_average]="movie.vote_average"
+            [selectButton]="true"
+            [release_date]="movie.release_date"
+            [id]="movie.id"
+          >
           </app-movie-poster>
           <div class="card-body">
             <h5 class="card-title fs-6 lh-sms">{{ movie.title }}</h5>
@@ -46,12 +57,20 @@
     </div>
   </div>
   <ng-container *ngIf="!genre">
-    <app-paginator [index]="index" [pagesArray]="pagesArray" [totalPages]="totalPages"
-      (newIndexValue)="sliceListMovies(true, $event)"></app-paginator>
+    <app-paginator
+      [index]="index"
+      [pagesArray]="pagesArray"
+      [totalPages]="totalPages"
+      (newIndexValue)="sliceListMovies(true, $event)"
+    ></app-paginator>
   </ng-container>
   <ng-container *ngIf="genre">
-    <app-paginator [index]="index" [pagesArray]="pagesArray2" [totalPages]="totalPages"
-      (newIndexValue)="sliceListMovies2(true, $event)"></app-paginator>
+    <app-paginator
+      [index]="index"
+      [pagesArray]="pagesArray2"
+      [totalPages]="totalPages"
+      (newIndexValue)="sliceListMovies2(true, $event)"
+    ></app-paginator>
   </ng-container>
   <app-whats-app-button></app-whats-app-button>
 </div>
