--- a/src/app/components/shared/movies-list-button/movies-list-button.component.css
+++ b/src/app/components/shared/movies-list-button/movies-list-button.component.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 50px;
   height: 50px;
-  bottom: 40px;
+  bottom: 20%;
   right: 25px;
   color: #fff;
   border-radius: 50px;
