--- a/src/app/components/shared/navbar/navbar.component.css
+++ b/src/app/components/shared/navbar/navbar.component.css
@@ -23,3 +23,13 @@
 .form-control:hover {
   box-shadow: none;
 }
+
+.margin {
+  margin-left: 1rem;
+}
+
+@media (max-width: 1024px) {
+  .margin {
+    margin-left: 0;
+  }
+}
