Usuario logueado directiva

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -72,6 +72,6 @@
       (newIndexValue)="sliceListMovies2(true, $event)"
     ></app-paginator>
   </ng-container>
-  <app-movies-list-button></app-movies-list-button>
+  <app-movies-list-button *appUserIn></app-movies-list-button>
   <app-whats-app-button></app-whats-app-button>
 </div>
