--- a/src/app/components/panel-list/panel-list.component.html
+++ b/src/app/components/panel-list/panel-list.component.html
@@ -3,21 +3,64 @@
     <mat-divider></mat-divider>
 </div>
 <div class="container">
-    <ng-container *ngIf="order">
-        <div class="row row-cols-2 row-cols-md-6" *ngIf="order.movies.length > 0">
-            <div class="col" *ngFor="let movie of order.movies">
-                <div class="card border-0 h-100">
-                    <app-movie-poster [imgSrc]="movie | imageSrc" [vote_average]="movie.vote_average"
-                        [release_date]="movie.release_date" [id]="movie.id">
-                    </app-movie-poster>
-                    <div class="card-body">
-                        <h5 class="card-title fs-6 lh-sms">{{ movie.title }}</h5>
-                        <p class="card-text">
-                            {{ movie.release_date | date: "MMMM d, yyyy" | titlecase }}
-                        </p>
+    <mat-tab-group mat-align-tabs="start">
+        <mat-tab label="Lista">
+            <ng-container *ngIf="order && order.movies">
+                <div class="row row-cols-2 row-cols-md-6 mt-3" *ngIf="order.movies.length > 0">
+                    <div class="col" *ngFor="let movie of order.movies">
+                        <div class="card border-0 h-100">
+                            <app-movie-poster [imgSrc]="movie | imageSrc" [vote_average]="movie.vote_average"
+                                [release_date]="movie.release_date" [id]="movie.id">
+                            </app-movie-poster>
+                            <div class="card-body">
+                                <h5 class="card-title fs-6 lh-sms">{{ movie.title }}</h5>
+                                <p class="card-text">
+                                    {{ movie.release_date | date: "MMMM d, yyyy" | titlecase }}
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div class="row" *ngIf="order.movies.length < 1">
+                    <div class="col-sm-12">
+                        <div class="alert alert-info" role="alert">
+                            No se encontraron resultados!
+                        </div>
+                    </div>
+                </div>
+            </ng-container>
+        </mat-tab>
+        <mat-tab label="Editar lista">
+            <div class="mt-3" *ngIf="order && order.movies">
+                <form class="example-form">
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>Buscar por nombre</mat-label>
+                        <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto"
+                            (keyup.enter)="editItem(myControl.value)">
+                        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                                {{option.title}}
+                            </mat-option>
+                        </mat-autocomplete>
+                    </mat-form-field>
+                </form>
+                <button mat-raised-button color="primary" *ngIf="movie && movie.id">Guardar</button>
+                <mat-selection-list #movies [multiple]="false">
+                    <mat-list-option *ngFor="let movie of order.movies" [value]="movie">
+                        {{movie.title}}
+                    </mat-list-option>
+                </mat-selection-list>
+
+                <section class="fs-6 mt-3" *ngIf="movies.selectedOptions.selected[0]?.value">
+                    <span style="color: #032541">{{
+                        movies.selectedOptions.selected[0]?.value.title
+                        }}</span>&nbsp;&nbsp;
+                    <button mat-mini-fab color="warn"
+                        (click)="deleteItem(movies.selectedOptions.selected[0]?.value.id)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </section>
             </div>
-        </div>
-    </ng-container>
+        </mat-tab>
+    </mat-tab-group>
 </div>
