--- a/src/app/components/panel-list/panel-list.component.html
+++ b/src/app/components/panel-list/panel-list.component.html
@@ -60,6 +60,10 @@
                         <mat-icon>delete</mat-icon>
                     </button>
                 </section>
+
+                <div class="mt-3">
+                    <button mat-raised-button color="warn" (click)="completeList()">Lista completada</button>
+                </div>
             </div>
         </mat-tab>
     </mat-tab-group>
