--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,44 +1,30 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a href="/" class="navbar-brand">Movies App</a>
-    <button
-      class="navbar-toggler float-right"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-    >
+    <button class="navbar-toggler float-right" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <div class="form-search bg-secondary">
-            <input
-              class="form-control me-2 custom"
-              type="search"
-              placeholder="Buscar"
-              aria-label="Search"
-              #movieSearch
-              (keyup.enter)="searchMovie(movieSearch.value)"
-            />
+            <input class="form-control me-2 custom" type="search" placeholder="Buscar" aria-label="Search" #movieSearch
+              (keyup.enter)="searchMovie(movieSearch.value)" />
           </div>
         </li>
         <br />
         <div *ngIf="_authService.auth.user | async as user; else showLogin">
-          <button
-            mat-mini-fab
-            color="primary"
-            (click)="logout()"
-            class="margin"
-          >
+          <button mat-mini-fab color="primary" (click)="logout()" class="margin">
             <mat-icon>exit_to_app</mat-icon>
           </button>
         </div>
         <ng-template #showLogin>
-          <button mat-icon-button (click)="login()" class="margin">
-            <mat-icon>login</mat-icon>
+          <button mat-icon-button (click)="login()" class="margin" color="warn">
+            <i class="fab fa-google"></i>
+          </button>
+          <button mat-icon-button (click)="loginFacebook()" class="margin fb">
+            <i class="fab fa-facebook-f"></i>
           </button>
         </ng-template>
       </ul>
