--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,56 +1,92 @@
 <div class="container p-5">
-    <h1>Lists</h1>
-    <mat-form-field appearance="standard">
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mobile" autocomplete="off" #input>
-    </mat-form-field>
+  <h1>Lists</h1>
+  <mat-form-field appearance="standard">
+    <mat-label>Filter</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ex. Mobile"
+      autocomplete="off"
+      #input
+    />
+  </mat-form-field>
 
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
-            <!-- Mobile Column -->
-            <ng-container matColumnDef="mobile">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="mobile"> Mobile </th>
-                <td mat-cell *matCellDef="let row" class="mobile"> {{row.mobile ? row.mobile : 'No registrado'}} </td>
-            </ng-container>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <!-- Mobile Column -->
+      <ng-container matColumnDef="mobile">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="mobile">
+          Mobile
+        </th>
+        <td mat-cell *matCellDef="let row" class="mobile">
+          {{ row.mobile ? row.mobile : "No registrado" }}
+        </td>
+      </ng-container>
 
-            <!-- Movies Column -->
-            <ng-container matColumnDef="movies">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="movies"> Movies </th>
-                <!-- <td mat-cell *matCellDef="let row"> {{row.movies}} </td> -->
-                <td mat-cell *matCellDef="let row" class="movies">
-                    <button mat-icon-button (click)="openList(row.id)">
-                        <mat-icon>movie</mat-icon>
-                    </button>
-                </td>
-            </ng-container>
+      <!-- Movies Column -->
+      <ng-container matColumnDef="movies">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="movies">
+          Movies
+        </th>
+        <!-- <td mat-cell *matCellDef="let row"> {{row.movies}} </td> -->
+        <td mat-cell *matCellDef="let row" class="movies">
+          <button mat-icon-button (click)="openList(row.id)">
+            <mat-icon>movie</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-            <!-- Status Column -->
-            <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="status"> Status </th>
-                <td mat-cell *matCellDef="let row" class="status">
-                    <span class="badge bg-light text-dark" *ngIf="row.status">Activo</span>
-                    <span class="badge bg-secondary" *ngIf="!row.status">Inactivo</span>
+      <!-- Status Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="status">
+          Status
+        </th>
+        <td mat-cell *matCellDef="let row" class="status">
+          <span class="badge bg-light text-dark" *ngIf="row.status"
+            >Activo</span
+          >
+          <span class="badge bg-secondary" *ngIf="!row.status">Inactivo</span>
+        </td>
+      </ng-container>
 
-                </td>
-            </ng-container>
+      <!-- Created date Column -->
+      <ng-container matColumnDef="createdDate">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="createdDate"
+        >
+          Created date
+        </th>
+        <td mat-cell *matCellDef="let row" class="createdDate">
+          {{ formatDate(row.createdDate) }}
+        </td>
+      </ng-container>
 
-            <!-- Created date Column -->
-            <ng-container matColumnDef="createdDate">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="createdDate"> Created date </th>
-                <td mat-cell *matCellDef="let row" class="createdDate"> {{formatDate(row.createdDate)}} </td>
-            </ng-container>
+      <!-- Delete Column -->
+      <ng-container matColumnDef="delete" *ngIf="!mobile">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Delete</th>
+        <td mat-cell *matCellDef="let row" class="createdDate">
+          <div class="example-button-container">
+            <button mat-mini-fab color="warn" (click)="deleteOrder(row.id)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </div>
+        </td>
+      </ng-container>
 
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          No data matching the filter "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
 
-            <!-- Row shown when there is no matching data. -->
-            <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-            </tr>
-
-        </table>
-
-        <mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator>
-    </div>
+    <mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator>
+  </div>
 </div>
