--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -72,6 +72,8 @@
       (newIndexValue)="sliceListMovies2(true, $event)"
     ></app-paginator>
   </ng-container>
-  <app-movies-list-button *appUserIn></app-movies-list-button>
+  <ng-container *ngIf="!loading">
+    <app-movies-list-button *appUserIn></app-movies-list-button>
+  </ng-container>
   <app-whats-app-button></app-whats-app-button>
 </div>
