--- a/src/app/components/shared/movies-list-button/dialoglistcontent/dialoglistcontent.component.html
+++ b/src/app/components/shared/movies-list-button/dialoglistcontent/dialoglistcontent.component.html
@@ -5,15 +5,25 @@
 <mat-dialog-content *ngIf="moviesList.length > 0">
   <form class="mb-2" [formGroup]="form">
     <label for="mobileInput" class="form-label">Número de telefono</label>
-    <input type="email" class="form-control" id="mobileInput" placeholder="*Opcional" formControlName="mobile"
-      autocomplete="off" />
-    <span *ngIf="
+    <input
+      type="email"
+      class="form-control"
+      id="mobileInput"
+      placeholder="*Opcional"
+      formControlName="mobile"
+      autocomplete="off"
+    />
+    <span
+      *ngIf="
         (form.controls['mobile'].errors?.maxlength ||
           form.controls['mobile'].errors?.minlength ||
           form.controls['mobile'].errors?.pattern) &&
         form.controls['mobile'].dirty &&
         form.controls['mobile'].touched
-      " class="text-danger">Solo números y deben ser 10 digítos...</span>
+      "
+      class="text-danger"
+      >Solo números y deben ser 10 digítos...</span
+    >
   </form>
 </mat-dialog-content>
 <mat-dialog-content class="mat-typography">
@@ -33,12 +43,18 @@
     </p>
   </div>
 </mat-dialog-content>
+<mat-divider></mat-divider>
 <mat-dialog-actions align="end">
-  <section *ngIf="movies.selectedOptions.selected[0]?.value">
+  <section *ngIf="movies.selectedOptions.selected[0]?.value" class="mt-3 mb-5">
     <span style="color: #032541">{{
       movies.selectedOptions.selected[0]?.value.title
-      }}</span>&nbsp;&nbsp;
-    <button mat-mini-fab color="warn" (click)="deleteItem(movies.selectedOptions.selected[0]?.value.id)">
+    }}</span
+    >&nbsp;&nbsp;
+    <button
+      mat-mini-fab
+      color="warn"
+      (click)="deleteItem(movies.selectedOptions.selected[0]?.value.id)"
+    >
       <mat-icon>delete</mat-icon>
     </button>
   </section>
@@ -48,8 +64,13 @@
   <mat-divider></mat-divider>
   <button mat-button mat-dialog-close>Cerrar</button>
   <button mat-button (click)="cleanList()">Limpiar lista...</button>
-  <button mat-mini-fab color="primary" style="color: white" [disabled]="!form.valid || moviesList.length < 1"
-    (click)="saveOrder()">
+  <button
+    mat-mini-fab
+    color="primary"
+    style="color: white"
+    [disabled]="!form.valid || moviesList.length < 1"
+    (click)="saveOrder()"
+  >
     <mat-icon>save</mat-icon>
   </button>
   <!-- <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button> -->
