--- a/src/app/components/shared/movies-list-button/movies-list-button.component.html
+++ b/src/app/components/shared/movies-list-button/movies-list-button.component.html
@@ -1,6 +1,7 @@
-<a class="float bg-primary" (click)="saveList()" style="cursor: pointer;">
+<a class="float bg-primary" (click)="saveList()" style="cursor: pointer">
   <i class="fas fa-clipboard-list fa-2x text-light my-float"></i>
-  <span class="
+  <span
+    class="
       position-absolute
       top-0
       start-100
@@ -8,7 +9,8 @@
       badge
       rounded-pill
       bg-danger
-    ">
+    "
+  >
     {{ itemsNumber }}
     <span class="visually-hidden">unread messages</span>
   </span>
