--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -30,7 +30,15 @@
         </th>
         <!-- <td mat-cell *matCellDef="let row"> {{row.movies}} </td> -->
         <td mat-cell *matCellDef="let row" class="movies">
-          <button mat-icon-button (click)="openList(row.id)">
+          <!-- <button mat-icon-button (click)="openList(row.id)">
+            <mat-icon>movie</mat-icon>
+          </button> -->
+          <button
+            mat-icon-button
+            [matBadge]="row.movies.length"
+            matBadgePosition="after"
+            (click)="openList(row.id)"
+          >
             <mat-icon>movie</mat-icon>
           </button>
         </td>
@@ -87,6 +95,6 @@
       </tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10, 20]"></mat-paginator>
   </div>
 </div>
