--- a/src/app/components/panel-list/panel-list.component.html
+++ b/src/app/components/panel-list/panel-list.component.html
@@ -38,74 +38,7 @@
       </ng-container>
     </mat-tab>
     <mat-tab label="Editar lista">
-      <div class="mt-3" *ngIf="order && order.movies">
-        <form class="example-form">
-          <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Buscar por nombre</mat-label>
-            <input
-              type="text"
-              matInput
-              [formControl]="myControl"
-              [matAutocomplete]="auto"
-              (keyup.enter)="editItem(myControl.value)"
-            />
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-              <mat-option
-                *ngFor="let option of filteredOptions | async"
-                [value]="option"
-              >
-                {{ option.title }}
-              </mat-option>
-            </mat-autocomplete>
-          </mat-form-field>
-        </form>
-        <button mat-raised-button color="primary" *ngIf="movie && movie.id">
-          Guardar
-        </button>
-        <mat-selection-list #movies [multiple]="false">
-          <mat-list-option *ngFor="let movie of order.movies" [value]="movie">
-            {{ movie.title }}
-          </mat-list-option>
-        </mat-selection-list>
-        <div class="mt-3 mb-3">
-          <mat-divider></mat-divider>
-        </div>
-        <section
-          class="fs-6 mt-3"
-          *ngIf="movies.selectedOptions.selected[0]?.value"
-        >
-          <span style="color: #032541">{{
-            movies.selectedOptions.selected[0]?.value.title
-          }}</span
-          >&nbsp;&nbsp;
-          <button
-            mat-mini-fab
-            color="warn"
-            (click)="deleteItem(movies.selectedOptions.selected[0]?.value.id)"
-          >
-            <mat-icon>delete</mat-icon>
-          </button>
-        </section>
-
-        <div class="mt-3">
-          <button
-            mat-raised-button
-            color="warn"
-            (click)="completeList()"
-            *ngIf="order.status"
-          >
-            Inactivar
-          </button>
-          <button
-            mat-raised-button
-            color="primary"
-            (click)="completeList(true)"
-            *ngIf="!order.status"
-          >
-            Activar
-          </button>
-        </div>
-      </div>
+      <app-edit-list [order]="order" [options]="options"></app-edit-list>
     </mat-tab>
   </mat-tab-group>
 </div>
