--- a/src/app/components/shared/edit-list/edit-list.component.html
+++ b/src/app/components/shared/edit-list/edit-list.component.html
@@ -1,4 +1,12 @@
-<div class="mt-3" *ngIf="order && order.movies">
+<div
+  class="mt-3"
+  *ngIf="order && order.movies"
+  [ngClass]="{ scroll: !edit, mt0: !edit }"
+>
+  <p style="color: transparent; font-size: 0.5rem">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris bibendum,
+    arcu et mattis sagittis.
+  </p>
   <form class="example-form">
     <mat-form-field
       class="example-full-width"
@@ -13,9 +21,14 @@
         [matAutocomplete]="auto"
         (keyup.enter)="editItem(myControl.value)"
       />
-      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+      <mat-autocomplete
+        #auto="matAutocomplete"
+        [displayWith]="displayFn"
+        appearance="fill"
+      >
         <mat-option
           *ngFor="let option of filteredOptions | async"
+          (click)="editItem(option)"
           [value]="option"
         >
           {{ option.title }}
@@ -26,7 +39,7 @@
   <button mat-raised-button color="primary" *ngIf="movie && movie.id">
     Guardar
   </button>
-  <mat-selection-list #movies [multiple]="false">
+  <mat-selection-list #movies [multiple]="false" [ngClass]="{ scroll: !edit }">
     <mat-list-option *ngFor="let movie of order.movies" [value]="movie">
       {{ movie.title }}
     </mat-list-option>
@@ -49,7 +62,44 @@
     </button>
   </section>
 
-  <div class="mt-3">
+  <form class="mb-2 mt-2" [formGroup]="form" *ngIf="!edit">
+    <label for="mobileInput" class="form-label">Número de telefono</label>
+    <input
+      type="text"
+      class="form-control"
+      id="mobileInput"
+      placeholder="*Opcional"
+      formControlName="mobile"
+      autocomplete="off"
+    />
+    <span
+      *ngIf="
+        (form.controls['mobile'].errors?.maxlength ||
+          form.controls['mobile'].errors?.minlength ||
+          form.controls['mobile'].errors?.pattern) &&
+        form.controls['mobile'].dirty &&
+        form.controls['mobile'].touched
+      "
+      class="text-danger"
+      >Solo números y deben ser 10 digítos...</span
+    >
+  </form>
+
+  <div class="mt-3" *ngIf="!edit">
+    <button
+      mat-raised-button
+      color="primary"
+      [matBadge]="order.movies.length"
+      matBadgePosition="after"
+      matBadgeColor="accent"
+      [disabled]="!form.valid"
+      (click)="saveOrder()"
+    >
+      Guardar
+    </button>
+  </div>
+
+  <div class="mt-3" *ngIf="edit">
     <button
       mat-raised-button
       color="warn"
