--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="main-content" id="main-container">
-    <div class="row container" *ngIf="loading">
+    <div class="row container mb-3" *ngIf="loading">
       <mat-progress-bar mode="query" color="primary"></mat-progress-bar>
     </div>
     <div class="row mb-2">
